syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example.common.grpc.order";
option java_outer_classname = "OrderServiceProto";

package order;

service OrderService {
  rpc GetOrderPrice(GetOrderPriceRequest) returns (GetOrderPriceResponse);
}

message GetOrderPriceRequest {
  int64 orderId = 1;
}

message GetOrderPriceResponse {
  int64 id = 1;
  string totalPrice = 2;
}